--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   @apply lg:mx-auto lg:px-24 xl:px-48 px-5;
 }
 .bg-gradient {
-  @apply bg-gradient-to-r from-sky-500 via-purple-500 to-pink-600;
+  @apply bg-gradient-to-r from-sky-500 via-green-500 to-green-800;
 }
 .text-gradient {
   @apply bg-clip-text bg-gradient text-transparent;
